--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This file was created by PyCharm 2.0.2 for binding GitHub repository
+This is my highschool finishing Atestat diploma Project
+
+ (c) E.M.  2012
